Add test for migration and additional for compliance profile services